2019-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/peeph.def:
	  Add a rule suggested by Free-PDK in RFE #630.
	* sdas/aspdk13/pdk13mch.c:
	  Fix curly brackets.
	* Makefile.in:
	  Fail build if any assembler fails to build.

2019-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Fix bug #2919 via suggestion by Free-PDK.

2019-06-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge pdk branch to trunk.

2019-06-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Fix bug #2915 via suggestion by Free-PDK.
	* configure.ac,
	  configure:
	  Disable pdk16 port by default.

2019-06-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z88/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in bitwise operations.
	* src/pdk/main.c:
	  Fix bug #2916.
	* src/z80/peeph-z80.def:
	  Fix bug #2914.

2019-06-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: pic14/libm no longer has *.c files
	  to install

2019-06-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in &.

2019-06-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix an issue in register allocation for GET_VALUE_AT_ADRESS.

2019-06-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2912.c:
	  Fix a typo that resulted in a test being accidentially enabled for pdk.
	* src/z80/gen.c:
	  Fix handling of swapped register operand in 16-bit shift by literal.

2019-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/SDCCgen.h,
	  src/SDCCgen.c,
	  src/z80/gen.c:
	  Improve handling of a.

2019-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in iy shuffling.

2019-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c,